1.17.x port (#249)