@@ -1,31 +1,31 @@
 package net.p3pp3rf1y.sophisticatedbackpacks.common;
 
-import com.google.common.collect.ImmutableList;
-import net.minecraft.enchantment.EnchantmentHelper;
-import net.minecraft.entity.EntityType;
-import net.minecraft.entity.LivingEntity;
-import net.minecraft.entity.ai.attributes.AttributeModifier;
-import net.minecraft.entity.ai.attributes.Attributes;
-import net.minecraft.entity.ai.attributes.ModifiableAttributeInstance;
-import net.minecraft.entity.item.ItemEntity;
-import net.minecraft.entity.monster.CreeperEntity;
-import net.minecraft.entity.monster.MonsterEntity;
-import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.inventory.EquipmentSlotType;
-import net.minecraft.item.Item;
-import net.minecraft.item.ItemStack;
-import net.minecraft.item.Items;
-import net.minecraft.item.MusicDiscItem;
-import net.minecraft.item.SpawnEggItem;
-import net.minecraft.potion.Effect;
-import net.minecraft.potion.EffectInstance;
-import net.minecraft.potion.Effects;
 import net.minecraft.server.MinecraftServer;
-import net.minecraft.util.SoundEvent;
+import net.minecraft.sounds.SoundEvent;
+import net.minecraft.world.effect.MobEffect;
+import net.minecraft.world.effect.MobEffectInstance;
+import net.minecraft.world.effect.MobEffects;
+import net.minecraft.world.entity.EntityType;
+import net.minecraft.world.entity.EquipmentSlot;
+import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.entity.Mob;
+import net.minecraft.world.entity.ai.attributes.AttributeInstance;
+import net.minecraft.world.entity.ai.attributes.AttributeModifier;
+import net.minecraft.world.entity.ai.attributes.Attributes;
+import net.minecraft.world.entity.item.ItemEntity;
+import net.minecraft.world.entity.monster.Creeper;
+import net.minecraft.world.entity.monster.Monster;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.item.Item;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.Items;
+import net.minecraft.world.item.RecordItem;
+import net.minecraft.world.item.SpawnEggItem;
+import net.minecraft.world.item.enchantment.EnchantmentHelper;
 import net.minecraftforge.common.util.FakePlayer;
 import net.minecraftforge.event.entity.living.LivingDropsEvent;
 import net.minecraftforge.event.entity.living.LivingEvent;
-import net.minecraftforge.fml.common.ObfuscationReflectionHelper;
+import net.minecraftforge.fml.util.ObfuscationReflectionHelper;
 import net.p3pp3rf1y.sophisticatedbackpacks.Config;
 import net.p3pp3rf1y.sophisticatedbackpacks.SophisticatedBackpacks;
 import net.p3pp3rf1y.sophisticatedbackpacks.api.CapabilityBackpackWrapper;
@@ -53,21 +53,21 @@ public class EntityBackpackAdditionHandler {
 	private static final String SPAWNED_WITH_BACKPACK = "spawnedWithBackpack";
 	private static final String SPAWNED_WITH_JUKEBOX_UPGRADE = SophisticatedBackpacks.MOD_ID + ":jukebox";
 
-	private static final List<WeightedElement<Item>> HELMET_CHANCES = ImmutableList.of(
+	private static final List<WeightedElement<Item>> HELMET_CHANCES = List.of(
 			new WeightedElement<>(1, Items.NETHERITE_HELMET),
 			new WeightedElement<>(3, Items.DIAMOND_HELMET),
 			new WeightedElement<>(9, Items.GOLDEN_HELMET),
 			new WeightedElement<>(27, Items.IRON_HELMET),
 			new WeightedElement<>(81, Items.LEATHER_HELMET)
 	);
-	private static final List<WeightedElement<Item>> LEGGINGS_CHANCES = ImmutableList.of(
+	private static final List<WeightedElement<Item>> LEGGINGS_CHANCES = List.of(
 			new WeightedElement<>(1, Items.NETHERITE_LEGGINGS),
 			new WeightedElement<>(3, Items.DIAMOND_LEGGINGS),
 			new WeightedElement<>(9, Items.GOLDEN_LEGGINGS),
 			new WeightedElement<>(27, Items.IRON_LEGGINGS),
 			new WeightedElement<>(81, Items.LEATHER_LEGGINGS)
 	);
-	private static final List<WeightedElement<Item>> BOOTS_CHANCES = ImmutableList.of(
+	private static final List<WeightedElement<Item>> BOOTS_CHANCES = List.of(
 			new WeightedElement<>(1, Items.NETHERITE_BOOTS),
 			new WeightedElement<>(3, Items.DIAMOND_BOOTS),
 			new WeightedElement<>(9, Items.GOLDEN_BOOTS),
@@ -75,7 +75,7 @@ public class EntityBackpackAdditionHandler {
 			new WeightedElement<>(81, Items.LEATHER_BOOTS)
 	);
 
-	private static final List<WeightedElement<BackpackAddition>> BACKPACK_CHANCES = ImmutableList.of(
+	private static final List<WeightedElement<BackpackAddition>> BACKPACK_CHANCES = List.of(
 			new WeightedElement<>(1, new BackpackAddition(ModItems.NETHERITE_BACKPACK.get(), 4,
 					HELMET_CHANCES.subList(0, 1), LEGGINGS_CHANCES.subList(0, 1), BOOTS_CHANCES.subList(0, 1))),
 			new WeightedElement<>(5, new BackpackAddition(ModItems.DIAMOND_BACKPACK.get(), 3,
@@ -88,7 +88,7 @@ public class EntityBackpackAdditionHandler {
 					HELMET_CHANCES.subList(3, 5), LEGGINGS_CHANCES.subList(3, 5), BOOTS_CHANCES.subList(3, 5)))
 	);
 
-	static void addBackpack(MonsterEntity monster) {
+	static void addBackpack(Monster monster) {
 		Random rnd = monster.level.random;
 		if (!Config.COMMON.entityBackpackAdditions.canWearBackpack(monster.getType())
 				|| rnd.nextInt((int) (1 / Config.COMMON.entityBackpackAdditions.chance.get())) != 0) {
@@ -103,15 +103,15 @@ public class EntityBackpackAdditionHandler {
 			applyPotions(monster, difficulty, minDifficulty);
 			raiseHealth(monster, minDifficulty);
 			if (Boolean.TRUE.equals(Config.COMMON.entityBackpackAdditions.equipWithArmor.get())) {
-				equipArmorPiece(monster, rnd, minDifficulty, backpackAddition.getHelmetChances(), EquipmentSlotType.HEAD);
-				equipArmorPiece(monster, rnd, minDifficulty, backpackAddition.getLeggingsChances(), EquipmentSlotType.LEGS);
-				equipArmorPiece(monster, rnd, minDifficulty, backpackAddition.getBootsChances(), EquipmentSlotType.FEET);
+				equipArmorPiece(monster, rnd, minDifficulty, backpackAddition.getHelmetChances(), EquipmentSlot.HEAD);
+				equipArmorPiece(monster, rnd, minDifficulty, backpackAddition.getLeggingsChances(), EquipmentSlot.LEGS);
+				equipArmorPiece(monster, rnd, minDifficulty, backpackAddition.getBootsChances(), EquipmentSlot.FEET);
 			}
 			monster.addTag(SPAWNED_WITH_BACKPACK);
 		});
 	}
 
-	private static void equipArmorPiece(MonsterEntity monster, Random rnd, int minDifficulty, List<WeightedElement<Item>> armorChances, EquipmentSlotType slot) {
+	private static void equipArmorPiece(Monster monster, Random rnd, int minDifficulty, List<WeightedElement<Item>> armorChances, EquipmentSlot slot) {
 		RandHelper.getRandomWeightedElement(rnd, armorChances).ifPresent(armorPiece -> {
 			if (armorPiece != Items.AIR) {
 				ItemStack armorStack = new ItemStack(armorPiece);
@@ -125,7 +125,7 @@ public class EntityBackpackAdditionHandler {
 		});
 	}
 
-	private static void equipBackpack(MonsterEntity monster, ItemStack backpack, int difficulty, boolean playMusicDisc) {
+	private static void equipBackpack(Monster monster, ItemStack backpack, int difficulty, boolean playMusicDisc) {
 		getSpawnEgg(monster.getType()).ifPresent(egg -> backpack.getCapability(CapabilityBackpackWrapper.getCapabilityInstance())
 				.ifPresent(w -> {
 					w.setColors(getPrimaryColor(egg), getSecondaryColor(egg));
@@ -138,25 +138,25 @@ public class EntityBackpackAdditionHandler {
 						}
 					}
 				}));
-		monster.setItemSlot(EquipmentSlotType.CHEST, backpack);
-		monster.setDropChance(EquipmentSlotType.CHEST, 0);
+		monster.setItemSlot(EquipmentSlot.CHEST, backpack);
+		monster.setDropChance(EquipmentSlot.CHEST, 0);
 	}
 
-	private static void addJukeboxUpgradeAndRandomDisc(MonsterEntity monster, IBackpackWrapper w) {
+	private static void addJukeboxUpgradeAndRandomDisc(Monster monster, IBackpackWrapper w) {
 		w.getUpgradeHandler().setStackInSlot(0, new ItemStack(ModItems.JUKEBOX_UPGRADE.get()));
 		Iterator<JukeboxUpgradeItem.Wrapper> it = w.getUpgradeHandler().getTypeWrappers(JukeboxUpgradeItem.TYPE).iterator();
 		if (it.hasNext()) {
 			JukeboxUpgradeItem.Wrapper wrapper = it.next();
-			List<MusicDiscItem> musicDiscs = getMusicDiscs();
+			List<RecordItem> musicDiscs = getMusicDiscs();
 			wrapper.setDisc(new ItemStack(musicDiscs.get(monster.level.random.nextInt(musicDiscs.size()))));
 		}
 	}
 
-	private static List<MusicDiscItem> musicDiscs = null;
+	private static List<RecordItem> musicDiscs = null;
 
-	private static List<MusicDiscItem> getMusicDiscs() {
+	private static List<RecordItem> getMusicDiscs() {
 		if (musicDiscs == null) {
-			Map<SoundEvent, MusicDiscItem> records = ObfuscationReflectionHelper.getPrivateValue(MusicDiscItem.class, null, "field_150928_b");
+			Map<SoundEvent, RecordItem> records = ObfuscationReflectionHelper.getPrivateValue(RecordItem.class, null, "f_43032_");
 			if (records == null) {
 				musicDiscs = new ArrayList<>();
 			} else {
@@ -174,11 +174,11 @@ public class EntityBackpackAdditionHandler {
 		return musicDiscs;
 	}
 
-	private static void raiseHealth(MonsterEntity monster, int minDifficulty) {
+	private static void raiseHealth(Monster monster, int minDifficulty) {
 		if (Boolean.FALSE.equals(Config.COMMON.entityBackpackAdditions.buffHealth.get())) {
 			return;
 		}
-		ModifiableAttributeInstance maxHealth = monster.getAttribute(Attributes.MAX_HEALTH);
+		AttributeInstance maxHealth = monster.getAttribute(Attributes.MAX_HEALTH);
 		if (maxHealth != null) {
 			double healthAddition = maxHealth.getBaseValue() * minDifficulty;
 			if (healthAddition > 0.1D) {
@@ -189,30 +189,30 @@ public class EntityBackpackAdditionHandler {
 	}
 
 	private static Optional<SpawnEggItem> getSpawnEgg(EntityType<?> entityType) {
-		Map<EntityType<?>, SpawnEggItem> eggs = ObfuscationReflectionHelper.getPrivateValue(SpawnEggItem.class, null, "field_195987_b");
+		Map<EntityType<? extends Mob>, SpawnEggItem> eggs = ObfuscationReflectionHelper.getPrivateValue(SpawnEggItem.class, null, "f_43201_");
 		return eggs == null ? Optional.empty() : Optional.ofNullable(eggs.get(entityType));
 	}
 
 	private static int getPrimaryColor(SpawnEggItem egg) {
-		Integer primaryColor = ObfuscationReflectionHelper.getPrivateValue(SpawnEggItem.class, egg, "field_195988_c");
+		Integer primaryColor = ObfuscationReflectionHelper.getPrivateValue(SpawnEggItem.class, egg, "f_151200_");
 		return primaryColor == null ? -1 : primaryColor;
 	}
 
 	private static int getSecondaryColor(SpawnEggItem egg) {
-		Integer secondaryColor = ObfuscationReflectionHelper.getPrivateValue(SpawnEggItem.class, egg, "field_195989_d");
+		Integer secondaryColor = ObfuscationReflectionHelper.getPrivateValue(SpawnEggItem.class, egg, "f_151201_");
 		return secondaryColor == null ? -1 : secondaryColor;
 	}
 
-	private static final List<ApplicableEffect> APPLICABLE_EFFECTS = ImmutableList.of(
-			new ApplicableEffect(Effects.DAMAGE_RESISTANCE, 3),
-			new ApplicableEffect(Effects.FIRE_RESISTANCE),
-			new ApplicableEffect(Effects.ABSORPTION),
-			new ApplicableEffect(Effects.HEALTH_BOOST),
-			new ApplicableEffect(Effects.REGENERATION),
-			new ApplicableEffect(Effects.MOVEMENT_SPEED),
-			new ApplicableEffect(Effects.DAMAGE_BOOST));
+	private static final List<ApplicableEffect> APPLICABLE_EFFECTS = List.of(
+			new ApplicableEffect(MobEffects.DAMAGE_RESISTANCE, 3),
+			new ApplicableEffect(MobEffects.FIRE_RESISTANCE),
+			new ApplicableEffect(MobEffects.ABSORPTION),
+			new ApplicableEffect(MobEffects.HEALTH_BOOST),
+			new ApplicableEffect(MobEffects.REGENERATION),
+			new ApplicableEffect(MobEffects.MOVEMENT_SPEED),
+			new ApplicableEffect(MobEffects.DAMAGE_BOOST));
 
-	private static void setLoot(MonsterEntity monster, IBackpackWrapper backpackWrapper, int difficulty) {
+	private static void setLoot(Monster monster, IBackpackWrapper backpackWrapper, int difficulty) {
 		MinecraftServer server = monster.level.getServer();
 		if (server == null) {
 			return;
@@ -223,17 +223,17 @@ public class EntityBackpackAdditionHandler {
 		}
 	}
 
-	private static void applyPotions(MonsterEntity monster, int difficulty, int minDifficulty) {
+	private static void applyPotions(Monster monster, int difficulty, int minDifficulty) {
 		if (Boolean.TRUE.equals(Config.COMMON.entityBackpackAdditions.buffWithPotionEffects.get())) {
 			RandHelper.getNRandomElements(APPLICABLE_EFFECTS, difficulty + 2)
 					.forEach(applicableEffect -> {
 						int amplifier = Math.min(Math.max(minDifficulty, monster.level.random.nextInt(difficulty + 1)), applicableEffect.getMaxAmplifier());
-						monster.addEffect(new EffectInstance(applicableEffect.getEffect(), 30 * 60 * 20, amplifier));
+						monster.addEffect(new MobEffectInstance(applicableEffect.getEffect(), 30 * 60 * 20, amplifier));
 					});
 		}
 	}
 
-	private static void addLoot(MonsterEntity monster, IBackpackWrapper backpackWrapper, int difficulty) {
+	private static void addLoot(Monster monster, IBackpackWrapper backpackWrapper, int difficulty) {
 		if (difficulty != 0) {
 			Config.COMMON.entityBackpackAdditions.getLootTableName(monster.getType()).ifPresent(lootTableName -> {
 				float lootPercentage = (float) difficulty / MAX_DIFFICULTY;
@@ -245,9 +245,9 @@ public class EntityBackpackAdditionHandler {
 	static void handleBackpackDrop(LivingDropsEvent event) {
 		if (event.getEntity().getTags().contains(SPAWNED_WITH_BACKPACK)) {
 			LivingEntity mob = event.getEntityLiving();
-			ItemStack backpack = mob.getItemBySlot(EquipmentSlotType.CHEST);
-			if (event.getSource().getEntity() instanceof PlayerEntity && !(event.getSource().getEntity() instanceof FakePlayer) &&
-					Math.max(mob.level.random.nextFloat() - (float) event.getLootingLevel() * 0.01F, 0.0F) < 0.085F) {
+			ItemStack backpack = mob.getItemBySlot(EquipmentSlot.CHEST);
+			if (event.getSource().getEntity() instanceof Player && !(event.getSource().getEntity() instanceof FakePlayer) &&
+					Math.max(mob.level.random.nextFloat() - event.getLootingLevel() * 0.01F, 0.0F) < 0.085F) {
 				ItemEntity backpackEntity = new ItemEntity(mob.level, mob.getX(), mob.getY(), mob.getZ(), backpack);
 				event.getDrops().add(backpackEntity);
 			} else {
@@ -256,18 +256,18 @@ public class EntityBackpackAdditionHandler {
 		}
 	}
 
-	public static void removeBeneficialEffects(CreeperEntity creeper) {
+	public static void removeBeneficialEffects(Creeper creeper) {
 		if (creeper.getTags().contains(SPAWNED_WITH_BACKPACK)) {
 			creeper.getActiveEffects().removeIf(e -> e.getEffect().isBeneficial());
 		}
 	}
 
-	public static void removeBackpackUuid(MonsterEntity entity) {
+	public static void removeBackpackUuid(Monster entity) {
 		if (!entity.isDeadOrDying() || !entity.getTags().contains(SPAWNED_WITH_BACKPACK)) {
 			return;
 		}
 
-		ItemStack stack = entity.getItemBySlot(EquipmentSlotType.CHEST);
+		ItemStack stack = entity.getItemBySlot(EquipmentSlot.CHEST);
 		removeContentsUuid(stack);
 	}
 
@@ -281,7 +281,7 @@ public class EntityBackpackAdditionHandler {
 		if (!entity.getTags().contains(SPAWNED_WITH_JUKEBOX_UPGRADE)) {
 			return;
 		}
-		entity.getItemBySlot(EquipmentSlotType.CHEST).getCapability(CapabilityBackpackWrapper.getCapabilityInstance())
+		entity.getItemBySlot(EquipmentSlot.CHEST).getCapability(CapabilityBackpackWrapper.getCapabilityInstance())
 				.ifPresent(backpackWrapper -> backpackWrapper.getUpgradeHandler().getTypeWrappers(JukeboxUpgradeItem.TYPE).forEach(wrapper -> {
 					if (wrapper.isPlaying()) {
 						wrapper.tick(entity, entity.level, entity.blockPosition());
@@ -330,20 +330,20 @@ public class EntityBackpackAdditionHandler {
 	}
 
 	private static class ApplicableEffect {
-		private final Effect effect;
+		private final MobEffect effect;
 
 		private final int maxAmplifier;
 
-		private ApplicableEffect(Effect effect) {
+		private ApplicableEffect(MobEffect effect) {
 			this(effect, Integer.MAX_VALUE);
 		}
 
-		private ApplicableEffect(Effect effect, int maxAmplifier) {
+		private ApplicableEffect(MobEffect effect, int maxAmplifier) {
 			this.effect = effect;
 			this.maxAmplifier = maxAmplifier;
 		}
 
-		public Effect getEffect() {
+		public MobEffect getEffect() {
 			return effect;
 		}
 
