@@ -1,6 +1,6 @@
 package net.p3pp3rf1y.sophisticatedbackpacks.upgrades;
 
-import com.google.common.collect.ImmutableMap;
+import net.minecraft.client.gui.narration.NarrationElementOutput;
 import net.p3pp3rf1y.sophisticatedbackpacks.client.gui.controls.ButtonDefinition;
 import net.p3pp3rf1y.sophisticatedbackpacks.client.gui.controls.ButtonDefinitions;
 import net.p3pp3rf1y.sophisticatedbackpacks.client.gui.controls.ToggleButton;
@@ -9,12 +9,14 @@ import net.p3pp3rf1y.sophisticatedbackpacks.client.gui.utils.GuiHelper;
 import net.p3pp3rf1y.sophisticatedbackpacks.client.gui.utils.Position;
 import net.p3pp3rf1y.sophisticatedbackpacks.client.gui.utils.UV;
 
+import java.util.Map;
+
 import static net.p3pp3rf1y.sophisticatedbackpacks.client.gui.utils.TranslationHelper.translUpgradeButton;
 import static net.p3pp3rf1y.sophisticatedbackpacks.upgrades.FilterLogicControlBase.Button.*;
 
 public abstract class ContentsFilterControl extends FilterLogicControl<ContentsFilterLogic, ContentsFilterLogicContainer> {
 	public static final ButtonDefinition.Toggle<ContentsFilterType> BACKPACK_CONTENTS_FILTER_TYPE = ButtonDefinitions.createToggleButtonDefinition(
-			ImmutableMap.of(
+			Map.of(
 					ContentsFilterType.ALLOW, GuiHelper.getButtonStateData(new UV(0, 0), translUpgradeButton("allow"), Dimension.SQUARE_16, new Position(1, 1)),
 					ContentsFilterType.BLOCK, GuiHelper.getButtonStateData(new UV(16, 0), translUpgradeButton("block"), Dimension.SQUARE_16, new Position(1, 1)),
 					ContentsFilterType.BACKPACK, GuiHelper.getButtonStateData(new UV(80, 16), translUpgradeButton("match_backpack_contents"), Dimension.SQUARE_16, new Position(1, 1))
@@ -30,6 +32,11 @@ public abstract class ContentsFilterControl extends FilterLogicControl<ContentsF
 		container.setFilterType(next);
 
 		container.getFilterSlots().forEach(slot -> slot.setEnabled(next != ContentsFilterType.BACKPACK));
+	}
+
+	@Override
+	public void updateNarration(NarrationElementOutput pNarrationElementOutput) {
+		//TODO add narration
 	}
 
 	public static class Basic extends ContentsFilterControl {
