@@ -1,7 +1,6 @@
 package net.p3pp3rf1y.sophisticatedbackpacks.upgrades.filter;
 
-import com.google.common.collect.ImmutableMap;
-import net.minecraft.util.text.ITextComponent;
+import net.minecraft.network.chat.Component;
 import net.p3pp3rf1y.sophisticatedbackpacks.Config;
 import net.p3pp3rf1y.sophisticatedbackpacks.client.gui.BackpackScreen;
 import net.p3pp3rf1y.sophisticatedbackpacks.client.gui.UpgradeSettingsTab;
@@ -15,12 +14,14 @@ import net.p3pp3rf1y.sophisticatedbackpacks.upgrades.FilterLogic;
 import net.p3pp3rf1y.sophisticatedbackpacks.upgrades.FilterLogicContainer;
 import net.p3pp3rf1y.sophisticatedbackpacks.upgrades.FilterLogicControl;
 
+import java.util.Map;
+
 import static net.p3pp3rf1y.sophisticatedbackpacks.client.gui.controls.ButtonDefinitions.createToggleButtonDefinition;
 import static net.p3pp3rf1y.sophisticatedbackpacks.client.gui.utils.TranslationHelper.*;
 
 public abstract class FilterUpgradeTab extends UpgradeSettingsTab<FilterUpgradeContainer> {
 	private static final ButtonDefinition.Toggle<Direction> DIRECTION = createToggleButtonDefinition(
-			ImmutableMap.of(
+			Map.of(
 					Direction.BOTH, GuiHelper.getButtonStateData(new UV(0, 32), translUpgradeButton("direction_both"), Dimension.SQUARE_16, new Position(1, 1)),
 					Direction.INPUT, GuiHelper.getButtonStateData(new UV(16, 32), translUpgradeButton("direction_input"), Dimension.SQUARE_16, new Position(1, 1)),
 					Direction.OUTPUT, GuiHelper.getButtonStateData(new UV(32, 32), translUpgradeButton("direction_output"), Dimension.SQUARE_16, new Position(1, 1))
@@ -29,7 +30,7 @@ public abstract class FilterUpgradeTab extends UpgradeSettingsTab<FilterUpgradeC
 	protected FilterLogicControl<FilterLogic, FilterLogicContainer<FilterLogic>> filterLogicControl;
 
 	protected FilterUpgradeTab(FilterUpgradeContainer upgradeContainer, Position position, BackpackScreen screen,
-			ITextComponent tabLabel, ITextComponent closedTooltip) {
+			Component tabLabel, Component closedTooltip) {
 		super(upgradeContainer, position, screen, tabLabel, closedTooltip);
 
 		addHideableChild(new ToggleButton<>(new Position(x + 3, y + 24), DIRECTION,
